refactor: Update app name and display name
Update the app name and display name in app.json and package.json to "DeepSleep". This ensures consistency across the project.

Refactor the base_url.js file

Update the remote URL in the base_url.js file to "https://DeepSleepb.intelgx.com". This reflects the correct URL for the remote server.

Update app name in strings.xml and Info.plist

Update the app name in strings.xml and Info.plist to "DeepSleep". This ensures consistency in the app name across different platforms.

Refactor project structure and file names

Update the project structure and file names to use "DeepSleep" instead of "DeepSleep5". This ensures consistency and clarity in the project.

Update package name in MainActivity.kt and MainApplication.kt

Update the package name in MainActivity.kt and MainApplication.kt to "com.DeepSleep". This ensures consistency in the package name across the project.

Update project name in settings.gradle and AppDelegate.mm

Update the project name in settings.gradle and AppDelegate.mm to "DeepSleep". This ensures consistency in the project name across different files.

Update app name in LaunchScreen.storyboard and DeepSleep5.xcscheme

Update the app name in LaunchScreen.storyboard and DeepSleep5.xcscheme to "DeepSleep". This ensures consistency in the app name across different files.

Update app name in ar.json

Update the app name in ar.json to "#DeepSleep". This ensures consistency in the app name across different locales.

Update app name in LaunchScreen.storyboard and DeepSleep5.xcscheme

Update the app name in LaunchScreen.storyboard and DeepSleep5.xcscheme to "DeepSleep". This ensures consistency in the app name across different files.

Update app name in ar.json

Update the app name in ar.json to "#DeepSleep". This ensures consistency in the app name across different locales.

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -8,7 +8,7 @@
   "Understanding your sleep problems": "فهم مشاكل نومك",
   "welcome": "مرحبا بك !",
   "welcome-description": " في تطبيق النوم الصحي",
-  "#deepsleep": " النوم_العميق ",
+  "#DeepSleep": " النوم_العميق ",
   "continue": "إستمر",
   "Login": "تسجيل الدخول",
   "Don't have an account?": "لا تملك حساب ؟ ",
@@ -22,7 +22,7 @@
   "Confirm Password": "تأكيد كلمة المرور",
   "Already have an account": "لديك حساب ؟ ",
   "Take sleep quiz": "قيم جودة نومك",
-  "New to deepsleep": "إنشاء حساب",
+  "New to DeepSleep": "إنشاء حساب",
   "Improve your health with a better sleep Join our courses for better sleep": "نوم صحي لحياة أفضل: انضم الآن إلى دورات تحسين النوم",
   "on_boarding_summary_text": "‫‬‫البرنامج‬ ‫العلاجي‬ ‫‬النوم‬‫_العميق‬‫ يحدد‬ ‫ويعالج‬ ‫الأسباب ‫الجذرية‬‫ لمشاكل‬ ‫النوم‬ ‫لديك‪،‬‬ ‫لذلك‬ ‫هو‬ ‫حل‬ ‫علاجي‬ ‫طويل ‫الأمد‪ ،‬‬‫وليس‬ ‫مجرد‬ ‫حل‬ ‫سريع‬.‬‬",
   "The #DeepSleep treatment program": "البرنامج العلاجي #النوم_العميق",
