refactoring added icons

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -10,6 +10,9 @@
   "welcome": "مرحبا بك !",
   "welcome-description": " في تطبيق النوم الصحي",
   "#DeepSleep": " النوم_العميق ",
+  "Cancel Booking":"إلغاء موعدك",
+  "Fail to book Appointment":"فشل حجز موعدكم الرجاء التاكد من عملية الدفع وإعادة المحاولة",
+  "you have scheduled consultation at":"لديك حجز موعد مسجل",
   "continue": "إستمر",
   "Login": "تسجيل الدخول",
   "Don't have an account?": "لا تملك حساب ؟ ",
