update added confirm component

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -13,6 +13,10 @@
   "Cancel Booking":"إلغاء موعدك",
   "Fail to book Appointment":"فشل حجز موعدكم الرجاء التاكد من عملية الدفع وإعادة المحاولة",
   "you have scheduled consultation at":"لديك حجز موعد مسجل",
+  "Are you sure you want to book this slot?":"هل انت متأكد من توقيت الموعد ؟",
+  "Are you sure you want to cancel your booking?":"هل متأكد انك تريد إلغاء موعدك ؟",
+  "Yes":"نعم",
+  "No":"لا",
   "continue": "إستمر",
   "Login": "تسجيل الدخول",
   "Don't have an account?": "لا تملك حساب ؟ ",
